--- a/style.css
+++ b/style.css
@@ -1,23 +1,27 @@
 /* 
     CSS BOX MODEL
+    Border
  */
 
 h1 {
 	background-color: red;
-	margin-top: 80px;
-	margin-bottom: 10px;
-	margin-left: 25px;
-	margin-right: 3px;}
 
-    
+    /*    All Round
+     border-style: solid;
+    border-width:10px;
+    border-color: green; */
+
+    /*  Just One Side
+    border-bottom: dashed;
+    border-bottom-width: 5px;
+    border-bottom-color: #222; */
+
+
+}
 p {
 	background: blue;
-
-	/* margin: 10px  all side padding */
-
-	/* margin: 30px (top,bottom) 45px(Left,Right); */
-
-    /* margin: 10px (top) 20px(Right) 30px (bottom) 40px(Left); */
+    /* Short Cut */
+    border: 13px solid blue
 
 
 }
